<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~
  ~ Author: Gehad Ahmed
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Guardian News 2</string>

    <string name="noArticles">"No articles found!"</string>
    <string name="noNetwork">"Please check your internet connection!"</string>
    
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For Topic Preference-->
    <string name="query_label">Topic or Section</string>
    <string name="query_key" translatable="false">query</string>
    <string name="query_default" translatable="false">technology</string>

    <!-- Strings For Order-By Preference-->
    <string name="order_by_label">Order by</string>
    <string name="order_by_key" translatable="false">order_by</string>
    <string name="order_by_default" translatable="false">@string/order_by_newest_value</string>

    <!-- Label for order-by newest option-->
    <string name="order_by_newest_label">Newest</string>
    <string name="order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option-->
    <string name="order_by_oldest_label">Oldest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>
</resources>