<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~
  ~ Author: Gehad Ahmed
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!--Query or Topic will be Text entered by the user-->
    <EditTextPreference
        android:defaultValue="@string/query_default"
        android:inputType="text"
        android:key="@string/query_key"
        android:selectAllOnFocus="true"
        android:title="@string/query_label" />

    <!--Order by will be a radio button to choose from-->
    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/order_by_labels"
        android:entryValues="@array/order_by_values"
        android:key="@string/order_by_key"
        android:title="@string/order_by_label" />

</PreferenceScreen>